--- a/Portfolio.html
+++ b/Portfolio.html
@@ -12,7 +12,7 @@
       <div class="title">Your Name</div>
       <div class="nav">
         <ul>
-          <li class="rayita"><a href="About.html">About</a></li>
+          <li class="rayita"><a href="Index.html">About</a></li>
           <li class="rayita"><a href="Portfolio.html">Portfolio</a></li>
           <li><a href="Contact.html">Contact</a></li>
         </ul>
